volumes.yaml
apiVersion: v1
kind: Pod
metadata:
	name: pod-with-volume
spec:
	containers:
		- image: alpine
		  name: alpine-container
		  command: ["/bin/sh", "-c"]
		  args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
		  volumeMounts:
		  	- mountPath: /opt
			  name: data-volume
	volumes:
		- name: data-volume
		  hostPath:
			path: /data
			type: Directory
