kube-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app
        image: your-dockerhub-username/your-image-name:tag
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-python-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
