networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: db-policy
spec:
    podSelector:
        matchLabels:
            role: db
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    name: api-pod
              namespaceSelector:
                matchLabels:
                    name: Prod
          ports:
            - protocol: TCP
              port: 3306
    egress:
        - to:
            - ipBlock:
                cidr: 192.168.5.10/32 #An outside this env pod or something
          ports:
                - protocol: TCP
                  port: 80
